v6 - readme added